<resources>
    <string name="app_name">R-SCOOP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iconName">Terms &amp; Condition</string>
    <string name="header1">You also want a dedicated reporting of your social media report? Get it instanlty in just a few taps</string>
    <string name="title">Hi Retvens,\nHow we can help you
    </string>
    <string name="title2">Get the updates of recent client in new countries</string>
    <string name="properties">Recent Properties</string>
    <string name="description">The European languages are members of the same family. Their separate existence is a myth. For science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes The European languages are members of the same family. Their separate existence is a myth.</string>

    <!--    Authentication String-->
    <string name="log_in">Log In</string>
    <string name="don_t_have_an">Don\'t have an account? Sign Up</string>
    <string name="connect_with_phone">Connect With Phone</string>
    <string name="enter_mail">Enter Email</string>
    <string name="password">Password</string>
    <string name="forgot_context">Please enter your email address. You will receive a link to create a new password via email.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="phone_context">Easy discovering new reports and download your social information with Retvens</string>
    <string name="enter_the">Enter the 4 digit code sent to your phone</string>
    <string name="i_have_a_problem">I have a problem.</string>
    <string name="hi_welcome">Hi,\nWelcome back!</string>
    <string name="about_us">About Us</string>
    <string name="help_center">Help Center</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="add_city">Add City</string>
    <string name="add_property">Add Property</string>
    <string name="add_country">Add Country</string>
    <string name="add_clients_users">Add Clients/Users</string>
    <string name="recent_properties">Recent Properties</string>
    <string name="all_tasks">All Tasks</string>
    <string name="try_to_enter_any_hotel_name">Try to Enter Any Hotel Name</string>
    <string name="marketing">Marketing</string>
    <string name="add_client">Add Client</string>
    <string name="add_properties">Add Properties</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_default_password">Enter default password</string>
    <string name="location">Location</string>

    <string name="have_total">Have total <b>18 Task</b></string>

    <style name="TabLayout">
        <item name="android:textStyle">bold</item>
        <item name="android:textSize">13dp</item>
        <item name="android:textColor">#C8C8D0</item>
    </style>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="enter_number_of_post_and_videos">Enter number of Post and Videos</string>
    <string name="enter_number_of_reviews">Enter number of reviews</string>
    <string name="_0_5_km"><b>0.5 </b>KM</string>
    <string name="_2_2">2,2</string>

</resources>