<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.ForgotPassword">

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="18dp"
        android:layout_height="16dp"
        android:src="@drawable/close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="26dp"/>

    <TextView
        android:id="@+id/f_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password"
        android:textSize="34sp"
        android:textColor="@color/black"
        android:fontFamily="@font/arvo"
        android:textStyle="bold"
        android:layout_margin="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/left_arrow"/>

    <TextView
        android:id="@+id/f_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_context"
        android:layout_margin="45dp"
        app:layout_constraintTop_toBottomOf="@id/f_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/f_mail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/enter_mail"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:startIconTint="@color/black"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/f_context"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/f_mail_e_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/arvo"
            android:textColor="@color/black"

            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/send_f_password"
        android:layout_width="315dp"
        android:layout_height="44dp"
        app:cardBackgroundColor="#FF2D55"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias=".01"
        app:layout_constraintTop_toBottomOf="@+id/f_mail_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:gravity="center_horizontal"
                android:text="@string/log_in"
                android:textSize="15sp"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>