<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoard.DashBoard.AdminDashBoard.Profile.AddClient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

    <ImageView
        android:id="@+id/add_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias=".05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias=".03"
        app:srcCompat="@drawable/back_btn" />

    <TextView
        android:id="@+id/add_clients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_client"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/avenir"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/add_back_btn"
        app:layout_constraintStart_toEndOf="@id/add_back_btn"
        app:layout_constraintBottom_toBottomOf="@id/add_back_btn"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/sky_blue"
        app:layout_constraintTop_toTopOf="@id/add_clients"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="@id/add_clients">

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:paddingHorizontal="25dp"
            android:background="@color/sky_blue"
            android:textSize="16sp"
            android:fontFamily="@font/avenir"
            android:textColor="@color/white"/>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/client_cover"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/png_image"
        app:layout_constraintTop_toBottomOf="@+id/add_clients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/client_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        style="@style/SpecificCornerRounded"
        android:src="@drawable/png_peop"
        app:layout_constraintTop_toBottomOf="@id/client_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/client_cover"/>


    <ImageView
        android:id="@+id/edit_clientProfile"
        android:layout_width="20dp"
        android:layout_height="20dp"
        style="@style/SpecificCornerRounded"
        android:src="@drawable/png_edit"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintTop_toTopOf="@id/client_profile"
        app:layout_constraintStart_toEndOf="@id/client_profile"
        app:layout_constraintBottom_toBottomOf="@id/client_profile"/>

    <ImageView
        android:id="@+id/edit_clientCover"
        android:layout_width="20dp"
        android:layout_height="20dp"
        style="@style/SpecificCornerRounded"
        android:src="@drawable/png_edit"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginEnd="6dp"
        app:layout_constraintTop_toTopOf="@id/client_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/client_cover"/>


    <EditText
        android:id="@+id/client_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Client Full Name"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/client_profile"
        android:fontFamily="@font/avenir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        style="@style/SpecificCornerRounded"
        android:src="@drawable/png_edit"
        app:layout_constraintVertical_bias="0.6"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/client_name_text"
        app:layout_constraintStart_toEndOf="@id/client_name_text"
        app:layout_constraintBottom_toBottomOf="@id/client_name_text"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/client_d_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        android:layout_margin="20dp"
        app:cardElevation="7dp"
        app:layout_constraintTop_toBottomOf="@id/client_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_corner"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="18dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/client_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_number"
                    android:textSize="17sp"
                    android:textColor="@color/add_details"
                    android:background="@null"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:fontFamily="@font/avenir"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentStart="true"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    style="@style/SpecificCornerRounded"
                    android:src="@drawable/png_edit"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="18dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/round_corner"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/client_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:textSize="17sp"
                    android:background="@null"
                    android:textColor="@color/add_details"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:fontFamily="@font/avenir"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentStart="true"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    style="@style/SpecificCornerRounded"
                    android:src="@drawable/png_edit"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="18dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/round_corner"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/client_pasword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_default_password"
                    android:textSize="17sp"
                    android:textColor="@color/add_details"
                    android:background="@null"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:fontFamily="@font/avenir"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentStart="true"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    style="@style/SpecificCornerRounded"
                    android:src="@drawable/png_edit"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="18dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_corner"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/client_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:textSize="17sp"
                    android:textColor="@color/add_details"
                    android:background="@null"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:fontFamily="@font/avenir"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentStart="true"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    style="@style/SpecificCornerRounded"
                    android:src="@drawable/png_edit"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"/>

            </RelativeLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/add_prop_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_properties"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:fontFamily="@font/avenir"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/client_d_card"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/client_add_prop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="20dp"
            app:cardElevation="8dp"
            android:padding="20dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_prop_text"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="40dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/png_add_pro"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add Hotel"
                    android:textSize="16sp"
                    android:fontFamily="@font/avenir"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>